# scheme-extensions

./: Data-Functor-Fixed.html  Data-Functor-Foldable.html  Data-Functor-Index.html  Data-Functor-Kan.html  Data-Functor-Pattern.html  README.md  doc-index-58.html  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index-X.html  doc-index-Y.html  doc-index-Z.html  doc-index.html  index.html  scheme-extensions.cabal  scheme-extensions.haddock
.github/workflows/: ci.yml
src/: Data.Functor.Fixed.html  Data.Functor.Foldable.html  Data.Functor.Index.html  Data.Functor.Kan.html  Data.Functor.Pattern.html
src/Data/Functor/: Fixed.hs  Foldable.hs  Index.hs  Kan.hs  Pattern.hs
test/: Main.hs
test/Test/Prop/: Fixed.hs  Foldable.hs  Index.hs  Pattern.hs
